[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypertorch"
version = "0.1.0"
description = "A collection of custom PyTorch modules for deep learning in hyperbolic space."
readme = "README.md"
authors = [
    { name = "Christopher Yogodzinski", email = "cyogodzi@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0"
]

# Optional: you can include extra groups for optional installs
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython"
]

[project.urls]
Homepage = "https://github.com/Yogiski/hypertorch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true