[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypertorch"
version = "0.1.0"
description = "A collection of custom PyTorch modules for deep learning in hyperbolic space."
readme = "README.md"
authors = [
    { name = "Christopher Yogodzinski", email = "cyogodzi@gmail.com" }
]
license = { text = "MIT" }
requires-python = "=3.8"

dependencies = [
    "torch>=2.4.0",
    "pyg>=2.6.1",
    "numpy>=1.24.3"
]

# Optional: you can include extra groups for optional installs
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Yogiski/hypertorch"

[tool.setuptools.packages.find]
where = ["src"]
